margin and color changes to feature section

--- a/index.html
+++ b/index.html
@@ -141,12 +141,9 @@
             <!-- /.container -->
         </section>
         <!-- /#section-3 -->
-        <section id="section-4" class="grey lighten-5">
+        <section id="section-4" class="orange lighten-1">
             <div class="container">
                 <div class="row section-spacing">
-                    <!-- <div class="col s12">
-                        <h4 class="light">More benefits</h4>
-                    </div> -->
                     <div class="col s12 m6 l4">
                         <div class="card hoverable white z-depth-0">
                             <div class="card-content left-align">
