--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <section id="section-3">
             <div class="container">
                 <div class="row">
-                    <div class="col s12 section-title">
-                        <h5 class="col s12 left-align light remove-padding-left"><a name="features"></a>Features</h5>
+                    <div class="col s12 section-title-container">
+                        <h5 class="col s12 left-align section-title remove-padding-left grey-text"><a name="features"></a>Features</h5>
                         <div class="col s1 section-title-underline teal"></div>
                     </div>
                     <div class="col s12 l6">
@@ -148,7 +148,7 @@
                         <div class="card hoverable white z-depth-0">
                             <div class="card-content left-align">
                                 <div class="col s12">
-                                    <img src="assets/img/exact-touchid-logo.png" class="touchid-card-icon" alt="" />
+                                    <img src="assets/img/exact-touchid-logo.png" class="touchid-card-icon hide-on-med-and-down" alt="" />
                                 </div>
                                 <span class="card-title">Fingerprint ID</span>
                                 <p class="light grey-text text-darken-1">That's not a word we made up I promise lol. Fingerprint ID means you can track your subscribers across your web properties even if they are in a private browser. Reporting is coming soon as well.</p>
@@ -162,7 +162,7 @@
                         <div class="card hoverable white z-depth-0">
                             <div class="card-content">
                                 <div class="col s12">
-                                    <img src="assets/img/shuffle.svg" class="responsive-img card-icons" alt="" />
+                                    <img src="assets/img/shuffle.svg" class="responsive-img card-icons hide-on-med-and-down" alt="" />
                                 </div>
                                 <span class="card-title">Easy Integration</span>
                                 <p class="light grey-text text-darken-1">I know you've seen the word "integration" before but we mean it. You don't have to worry about switching all your forms, transfering your list, or anything just enter your AWeber login and you're done.</p>
@@ -176,13 +176,13 @@
                         <div id="live_chat_link" class="card hoverable white z-depth-0">
                             <div class="card-content">
                                 <div class="col s12">
-                                    <img src="assets/img/chat.svg" class="responsive-img card-icons" alt="" />
+                                    <img src="assets/img/chat.svg" class="responsive-img card-icons hide-on-med-and-down" alt="" />
                                 </div>
                                 <span class="card-title">Live Chat Support</span>
                                 <p class="light grey-text text-darken-1">You are not alone in your business. We are a small team that doesn't sleep much and here to help you every step of the way! Our secret is Cuban coffee in case you were wondering..</p>
                             </div>
                             <div class="card-action">
-                                <a class="teal-text">Chat with us!</a>
+                                <a class="teal-text">Click to chat with us!</a>
                             </div>
                         </div>
                     </div>
@@ -190,129 +190,147 @@
             </div>
         </section>
         <section id="section-5">
+            <div class="container-fluid">
+                <div class="row">
+                  <div class="col s12 l6">
+                    <img class="responsive-img" src="assets/img/biznobo_ui_laptop.png" alt="" />
+                  </div>
+                    <div class="col s12 l6">
+                        <h4 class="col s12 light left-align">Visual Funnel Editor</h4>
+                        <p class="col s12 light left-align">
+                          Build your funnels visually in the canvas.See what's working, what's not, and what to do about it.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section-6">
             <div class="container">
                 <div class="row">
-                    <div class="col s12 section-title">
-                        <h5 class="col s12 left-align light remove-padding-left"><a name="pricing"></a>Pricing</h5>
+                    <div class="col s12 section-title-container">
+                        <h5 class="col s12 left-align section-title remove-padding-left grey-text"><a name="pricing"></a>Pricing</h5>
                         <div class="col s1 section-title-underline teal"></div>
-                      </div>
-                        <div class="col s12 m6 l4 offset-l4 offset-m3">
-                            <div id="pricing-card" class="card teal ">
-                                <div class="card-content center-align">
-                                    <span class="card-title">Beta</span>
-                                    <p class="light"><span id="price" class="white-text">$50</span>/month</p>
-                                </div>
-                                <div class="card-action white center-align">
-                                    <ul class="grey-text text-darken-2">
-                                        <li>100% Refundable</li>
-                                        <br>
-                                        <li>Famous 24/7 support fueled by Cuban coffee</li>
-                                        <br>
-                                        <li></li>
-                                    </ul>
-                                    <a class="teal-text" href="#">Sign Up</a>
-                                </div>
+                    </div>
+                    <div class="col s12">
+                        <h5 class="col s12 l8 light">Simple pricing for our beta users.Lock in the price for life and get access to all the releases. </h5>
+                    </div>
+                    <div class="col s12 m6 l4 offset-m3 offset-l4">
+                        <div id="pricing-card" class="card teal ">
+                            <div class="card-content center-align">
+                                <span class="card-title">Beta</span>
+                                <p class="light"><span id="price" class="white-text">$50</span>/month</p>
+                            </div>
+                            <div class="card-action white center-align">
+                                <ul class="grey-text text-darken-2">
+                                    <li>100% Refundable</li>
+                                    <br>
+                                    <li>Famous 24/7 support fueled by Cuban coffee</li>
+                                    <br>
+                                    <li></li>
+                                </ul>
+                                <a class="teal-text" href="#">Sign Up</a>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
-        </div>
-        <footer class="page-footer grey darken-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">We are in BETA!</h5>
-                        <p class="white-text">If you have yous still have questions click the live chat bubble on the right hand side to chat with us!</p>
-                    </div>
-                    <!-- /.col l6 s12 -->
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Company</h5>
-                        <ul>
-                            <li><a class="white-text" href="#!">Blog</a></li>
-                            <li><a class="white-text" href="https://www.biznobo.com/login">Login</a></li>
-                            <li><a class="white-text" href="https://www.biznobo.com/signup">Sign Up</a></li>
-                            <br>
-                            <li><a href="https://twitter.com/Biznobo" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Biznobo</a>
-                                <script>
-                                    ! function(d, s, id) {
-                                        var js, fjs = d.getElementsByTagName(s)[0],
-                                            p = /^http:/.test(d.location) ? 'http' : 'https';
-                                        if (!d.getElementById(id)) {
-                                            js = d.createElement(s);
-                                            js.id = id;
-                                            js.src = p + '://platform.twitter.com/widgets.js';
-                                            fjs.parentNode.insertBefore(js, fjs);
-                                        }
-                                    }(document, 'script', 'twitter-wjs');
-                                </script>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.col l4 /.offset-l2 /.s12 -->
+    </div>
+    <footer class="page-footer grey darken-1">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">We are in BETA!</h5>
+                    <p class="white-text">If you have yous still have questions click the live chat bubble on the right hand side to chat with us!</p>
                 </div>
-                <!-- /.row-->
+                <!-- /.col l6 s12 -->
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Company</h5>
+                    <ul>
+                        <li><a class="white-text light" href="#!">Blog</a></li>
+                        <li><a class="white-text light" href="https://www.biznobo.com/login">Login</a></li>
+                        <li><a class="white-text light" href="https://www.biznobo.com/signup">Sign Up</a></li>
+                        <br>
+                        <li><a href="https://twitter.com/Biznobo" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Biznobo</a>
+                            <script>
+                                ! function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0],
+                                        p = /^http:/.test(d.location) ? 'http' : 'https';
+                                    if (!d.getElementById(id)) {
+                                        js = d.createElement(s);
+                                        js.id = id;
+                                        js.src = p + '://platform.twitter.com/widgets.js';
+                                        fjs.parentNode.insertBefore(js, fjs);
+                                    }
+                                }(document, 'script', 'twitter-wjs');
+                            </script>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.col l4 /.offset-l2 /.s12 -->
+            </div>
+            <!-- /.row-->
+        </div>
+        <!-- /.container-->
+        <div class="footer-copyright">
+            <div class="container">
+                © 2015-2016 Biznobo
             </div>
             <!-- /.container-->
-            <div class="footer-copyright">
-                <div class="container">
-                    © 2015-2016 Biznobo
-                </div>
-                <!-- /.container-->
-            </div>
-            <!-- /.footer-copyright -->
-        </footer>
+        </div>
+        <!-- /.footer-copyright -->
+    </footer>
 
 
 
 
-        <!--Import jQuery before materialize.js-->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <!-- Compiled and minified JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-        <!-- User JavaScript -->
-        <script type="text/javascript" src="js/jQuery.js"></script>
-        <!-- Intercom Script -->
-        <script>
-            window.intercomSettings = {
-                app_id: "iuq40fz1"
-            };
-        </script>
-        <script>
-            (function() {
-                var w = window;
-                var ic = w.Intercom;
-                if (typeof ic === "function") {
-                    ic('reattach_activator');
-                    ic('update', intercomSettings);
-                } else {
-                    var d = document;
-                    var i = function() {
-                        i.c(arguments)
-                    };
-                    i.q = [];
-                    i.c = function(args) {
-                        i.q.push(args)
-                    };
-                    w.Intercom = i;
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+    <!-- User JavaScript -->
+    <script type="text/javascript" src="js/jQuery.js"></script>
+    <!-- Intercom Script -->
+    <script>
+        window.intercomSettings = {
+            app_id: "iuq40fz1"
+        };
+    </script>
+    <script>
+        (function() {
+            var w = window;
+            var ic = w.Intercom;
+            if (typeof ic === "function") {
+                ic('reattach_activator');
+                ic('update', intercomSettings);
+            } else {
+                var d = document;
+                var i = function() {
+                    i.c(arguments)
+                };
+                i.q = [];
+                i.c = function(args) {
+                    i.q.push(args)
+                };
+                w.Intercom = i;
 
-                    function l() {
-                        var s = d.createElement('script');
-                        s.type = 'text/javascript';
-                        s.async = true;
-                        s.src = 'https://widget.intercom.io/widget/iuq40fz1';
-                        var x = d.getElementsByTagName('script')[0];
-                        x.parentNode.insertBefore(s, x);
-                    }
-                    if (w.attachEvent) {
-                        w.attachEvent('onload', l);
-                    } else {
-                        w.addEventListener('load', l, false);
-                    }
+                function l() {
+                    var s = d.createElement('script');
+                    s.type = 'text/javascript';
+                    s.async = true;
+                    s.src = 'https://widget.intercom.io/widget/iuq40fz1';
+                    var x = d.getElementsByTagName('script')[0];
+                    x.parentNode.insertBefore(s, x);
                 }
-            })()
-        </script>
-        <!-- Facebook Tracking Pixel -->
+                if (w.attachEvent) {
+                    w.attachEvent('onload', l);
+                } else {
+                    w.addEventListener('load', l, false);
+                }
+            }
+        })()
+    </script>
+    <!-- Facebook Tracking Pixel -->
 
 </body>
 
