--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <p class="light grey-text text-darken-1">That's not a word we made up I promise lol. Fingerprint ID means you can track your subscribers across your web properties even if they are in a private browser. Reporting is coming soon as well.</p>
                             </div>
                             <div class="card-action">
-                                <a class="teal-text" href="#">Create an Account</a>
+                                <a class="teal-text" href="https://www.biznobo.com/signup">Create an Account</a>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                                 <p class="light grey-text text-darken-1">I know you've seen the word "integration" before but we mean it. You don't have to worry about switching all your forms, transfering your list, or anything just enter your AWeber login and you're done.</p>
                             </div>
                             <div class="card-action">
-                                <a class="teal-text" href="#">Sign Up</a>
+                                <a class="teal-text" href="https://www.biznobo.com/signup">Sign Up</a>
                             </div>
                         </div>
                     </div>
@@ -195,11 +195,17 @@
                   <div class="col s12 l6">
                     <img class="responsive-img" src="assets/img/biznobo_ui_laptop.png" alt="" />
                   </div>
+                  <br>
+                  <br>
                     <div class="col s12 l6">
-                        <h4 class="col s12 light left-align">Visual Funnel Editor</h4>
-                        <p class="col s12 light left-align">
+                        <h4 class="col s12 left-align">Visual Funnel Editor</h4>
+                        <h5 class="col s12 light left-align">
                           Build your funnels visually in the canvas.See what's working, what's not, and what to do about it.
-                        </p>
+                        </h5>
+                        <ul class="col s12 left-align light">
+                          <li>See how many people reach each step in your funnel.</li>
+                          <li>How many of those people convert to the next step.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -211,24 +217,20 @@
                         <h5 class="col s12 left-align section-title remove-padding-left grey-text"><a name="pricing"></a>Pricing</h5>
                         <div class="col s1 section-title-underline teal"></div>
                     </div>
-                    <div class="col s12">
-                        <h5 class="col s12 l8 light">Simple pricing for our beta users.Lock in the price for life and get access to all the releases. </h5>
-                    </div>
-                    <div class="col s12 m6 l4 offset-m3 offset-l4">
-                        <div id="pricing-card" class="card teal ">
+                    <div class="col s12 l6">
+                      <ul class="grey-text text-darken-2">
+                          <li><h4>No risk</h4></li>
+                          <br>
+                          <li>100% Refundable</li>
+                          <br>
+                          <li>Famous 24/7 support fueled by Cuban coffee</li>
+                      </ul>
+                      <a class="teal-text" href="https://www.biznobo.com/signup">Sign Up</a>                    </div>
+                    <div class="col s12 m6 l4 offset-m3 push-l1 ">
+                        <div id="pricing-card" class="card white ">
                             <div class="card-content center-align">
                                 <span class="card-title">Beta</span>
-                                <p class="light"><span id="price" class="white-text">$50</span>/month</p>
-                            </div>
-                            <div class="card-action white center-align">
-                                <ul class="grey-text text-darken-2">
-                                    <li>100% Refundable</li>
-                                    <br>
-                                    <li>Famous 24/7 support fueled by Cuban coffee</li>
-                                    <br>
-                                    <li></li>
-                                </ul>
-                                <a class="teal-text" href="#">Sign Up</a>
+                                <p class="light"><span id="price" class="teal-text">$50</span>/month</p>
                             </div>
                         </div>
                     </div>
@@ -236,7 +238,7 @@
             </div>
         </section>
     </div>
-    <footer class="page-footer grey darken-1">
+    <footer class="page-footer grey darken-2">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
